third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_combo_invalid.exp

Diagnostics:
error: cannot copy mutable reference in local `s`
   ┌─ tests/reference-safety/v1-tests/dereference_combo_invalid.move:26:23
   │
26 │         if (cond) x = copy s else x = other; // different error in v2 because copy of &mut
   │                       ^^^^^^ copied here


Diagnostics:
error: cannot dereference local `s` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo_invalid.move:20:9
   │
19 │         if (cond) f = &mut s.f else f = &mut s.g;
   │                       --------          -------- previous mutable field borrow
   │                       │
   │                       previous mutable field borrow
20 │         *s;
   │         ^^ dereferenced here

error: cannot dereference local `s` which is still mutable borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo_invalid.move:13:9
   │
12 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- previous mutable field borrow
13 │         *s;
   │         ^^ dereferenced here
